--- a/spa/src/components/header/Header.css
+++ b/spa/src/components/header/Header.css
@@ -7,16 +7,14 @@
 .navigation-container {
   display: flex;
   padding-top: 6px;
+  max-height: 80px;
 }
 
 .left-navigation-container {
   box-align: center;
   align-items: center;
-
   display: flex;
-
   box-flex: 1;
-
   flex-grow: 1;
   padding-left: 10px;
 }
@@ -101,14 +99,14 @@
 }
 
 #profileImage {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: #512da8;
-  font-size: 15px;
+  font-size: 20px;
   color: #fff;
   text-align: center;
-  line-height: 28px;
+  line-height: 40px;
   margin: 20px 0;
 }
 
