--- a/spa/src/components/sidebar/SideBar.css
+++ b/spa/src/components/sidebar/SideBar.css
@@ -1,32 +1,43 @@
 /* Dropdown styles */
 .dropdown {
+  position: relative;
   display: inline-block;
-  margin-left: 15px;
-  position: sticky;
-  top: 30%;
+}
+
+.dropbtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
 .dropdown-content {
-  opacity: 0;
+  display: none;
   position: absolute;
-  z-index: 5;
-  overflow: visible;
-  transition: all 1s ease-out;
+  background: none;
+  min-width: 160px;
+  z-index: 1;
 }
+
 .dropdown-content button {
-  width: 15vw;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  background-color: white;
 }
 
-.dropdown button:hover + .dropdown-content {
-  opacity: 1;
+.dropdown-content button:hover {
+  background-color: #eae0e0;
 }
 
-.dropdown-option {
-  cursor: pointer;
-  padding: 5px;
-  margin-bottom: 5px;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
-.dropdown-option:hover {
-  background-color: #ddd;
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
