--- a/spa/src/components/titlepanel/TitlePanel.css
+++ b/spa/src/components/titlepanel/TitlePanel.css
@@ -1,15 +1,19 @@
-.form-container input[type='text'] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-bottom: 15px;
-    display: block;
-  }
+.title-container {
+  border: 1px solid red;
+  padding: 10px;
+  margin-top: 20px;
+}
+.title-container input[type="text"] {
 
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  display: block;
+  padding: 10px;
+}
 
-  .form-container input[type='text']:focus {
-    outline: none;
-    border-color: #0077cc;
-  }
+.title-container input[type="text"]:focus {
+  outline: none;
+  border-color: #0077cc;
+}
