--- a/spa/src/components/myforms/MyForms.css
+++ b/spa/src/components/myforms/MyForms.css
@@ -1,3 +1,10 @@
+.sample-forms-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+
 .my-forms-container {
   display: flex;
   flex-wrap: wrap;
