--- a/spa/src/components/header/Header.css
+++ b/spa/src/components/header/Header.css
@@ -2,6 +2,9 @@
   background-color: #fff;
   border-bottom: 1px solid #dadce0;
   width: 100%;
+  position: fixed;
+  top: 0%;
+  z-index: 1;
 }
 
 .navigation-container {
