--- a/spa/src/components/home/Home.css
+++ b/spa/src/components/home/Home.css
@@ -1,43 +1,46 @@
 .form-panel {
-    position: absolute;
-    display: flex;
-    left: 50%;
-    transform: translate(-40%);
-    width: 60vw;
-    overflow: auto;
-    height: 100%;
-    text-align: center;
-    height: 100vh;
-  }
-  
-  .mainPanel {
-    flex:0.9;
-    max-width: 70%;
-  }
-  
-  .sidebar__menu {
-    display: flex;
-    margin-top: 20px;
-  }
-  
-  .sidebar__menuOptions {
-    flex: 1;
-    text-align: center;
-    padding-right: 20px;
-    padding-bottom: 8px;
-    text-decoration: none;
-    color: #6b6b6b;
-    font-weight: 300;
-    padding-left: 20px;
-    font-size: 15px;
-    cursor: pointer;
-  }
-  
-  .sidebar__menuOptions.active {
-    color: #292222;
-    border-bottom: 3px solid #f76a3f;
-  }
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translate(-40%);
+  width: 60vw;
+  overflow: auto;
+  height: 100%;
+  text-align: center;
+  height: 100vh;
+  overflow: inherit;
+  margin-top: 100px;
+}
 
-  .createButton {
-    margin-top:10px
-  }
+.mainPanel {
+  flex: 0.9;
+  max-width: 70%;
+}
+
+.sidebar__menu {
+  display: flex;
+  margin-top: 20px;
+}
+
+.sidebar__menuOptions {
+  flex: 1;
+  text-align: center;
+  padding-right: 20px;
+  padding-bottom: 8px;
+  text-decoration: none;
+  color: #6b6b6b;
+  font-weight: 300;
+  padding-left: 20px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.sidebar__menuOptions.active {
+  color: #292222;
+  border-bottom: 3px solid #f76a3f;
+}
+
+.createButton {
+  margin: auto;
+  margin-top: 10px;
+}
