--- a/spa/src/components/titlepanel/TitlePanel.css
+++ b/spa/src/components/titlepanel/TitlePanel.css
@@ -1,19 +1,29 @@
 .title-container {
-  border: 1px solid red;
+  border: 0.1px solid rgb(174, 147, 147);
   padding: 10px;
   margin-top: 20px;
+  box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.141),
 }
 .title-container input[type="text"] {
-
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  margin-bottom: 15px;
-  display: block;
   padding: 10px;
+  border: 0px;
+  font-weight: 400;
+  border-bottom: 0.8px solid rgb(208, 189, 189);
+  transition: border-color 0.2s ease-in-out;
+}
+
+.title-container .form-title {
+  font-size: 24pt;
+}
+
+.title-container .form-description {
+  font-size: 11pt;
 }
 
 .title-container input[type="text"]:focus {
+  border-color: #3498db;
+  border: 0px;
+  border-bottom:  1px solid rgb(118, 96, 164);
   outline: none;
-  border-color: #0077cc;
+  transition: border-color 0.2s ease-in-out;
 }
