--- a/spa/src/components/sidebar/SideBar.css
+++ b/spa/src/components/sidebar/SideBar.css
@@ -5,13 +5,18 @@
 }
 
 .dropbtn {
-  background-color: #4caf50;
+  background-color: #272727;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
 
 .dropdown-content {
   display: none;
@@ -38,6 +43,3 @@
   display: block;
 }
 
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
