--- a/spa/src/index.css
+++ b/spa/src/index.css
@@ -1,3 +1,11 @@
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body{
+  background: #f5f5f5;
+}
+
 input[type="text"],
 button,
 label {
@@ -14,13 +22,17 @@ input[type="checkbox"] {
 }
 
 button {
-  background-color: #283593;
-  color: #fff;
+  background-color: #eee;
+  color: #444;
   cursor: pointer;
+  border-radius: 20px;
+  min-width: 100px;
+  font-size: .8em;
+  font-weight: bold;
 }
 
 button:hover {
-  background-color: #1a237e;
+  background-color: #fff;
 }
 
 .add-component-container {
@@ -43,4 +55,12 @@ button:hover {
 
 .component-options button {
   margin: 0.5rem 0;
+}
+
+
+.container{
+  
+  margin: 20px;
+  padding:20px;
+  background: white;
 }
