--- a/spa/src/components/login/LoginBox.css
+++ b/spa/src/components/login/LoginBox.css
@@ -7,7 +7,8 @@
 
 .login-box {
   width: 400px;
-  border: 1px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ 
   padding: 20px;
   text-align: center;
 }
