--- a/spa/src/index.css
+++ b/spa/src/index.css
@@ -1,8 +1,9 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body{
+body {
   background: #f5f5f5;
 }
 
@@ -27,7 +28,7 @@ button {
   cursor: pointer;
   border-radius: 20px;
   min-width: 100px;
-  font-size: .8em;
+  font-size: 0.8em;
   font-weight: bold;
 }
 
@@ -57,10 +58,7 @@ button:hover {
   margin: 0.5rem 0;
 }
 
-
-.container{
-  
+.container {
   margin: 20px;
-  padding:20px;
-  background: white;
+  padding: 20px;
 }
