--- a/spa/src/pages/Home/Home.css
+++ b/spa/src/pages/Home/Home.css
@@ -1,55 +1,68 @@
+.formbuilder-container {
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translate(-40%);
+  width: 60vw;
+  height: 100%;
+  height: 100vh;
+  justify-content: space-evenly;
+}
+.form-panel {
+  flex-grow: 0.6;
+  background: white;
+  padding: 30px;
+}
 
+.mainPanel {
+  max-width: 70%;
+}
+
+.sidebar__menu {
+  display: flex;
+  margin-top: 20px;
+}
+
+.sidebar__menuOptions {
+  flex: 1;
+  text-align: center;
+  padding-right: 20px;
+  padding-bottom: 8px;
+  text-decoration: none;
+  color: #6b6b6b;
+  font-weight: 300;
+  padding-left: 20px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.sidebar__menuOptions.active {
+  color: #292222;
+  border-bottom: 3px solid #f76a3f;
+}
+
+.createButton {
+  margin: auto;
+  margin-top: 10px;
+}
 
 .formbuilder-container {
-    position: absolute;
-    display: flex;
-    left: 50%;
-    transform: translate(-40%);
-    width: 60vw;
-    height: 100%;
-    text-align: center;
-    height: 100vh;
-    justify-content: space-evenly;
-    overflow: hidden;
+  display: flex;
+}
 
-  }
-  .form-panel {
-    flex-grow: 0.6;
-  }
-  
-  .mainPanel {
-    max-width: 70%;
-  }
-  
-  .sidebar__menu {
-    display: flex;
-    margin-top: 20px;
-  }
-  
-  .sidebar__menuOptions {
-    flex: 1;
-    text-align: center;
-    padding-right: 20px;
-    padding-bottom: 8px;
-    text-decoration: none;
-    color: #6b6b6b;
-    font-weight: 300;
-    padding-left: 20px;
-    font-size: 15px;
-    cursor: pointer;
-  }
-  
-  .sidebar__menuOptions.active {
-    color: #292222;
-    border-bottom: 3px solid #f76a3f;
-  }
-  
-  .createButton {
-    margin: auto;
-    margin-top: 10px;
-  }
-  
-  .formbuilder-container {
-    display: flex;
-  }
-  
+
+input[type="text"] {
+  padding: 10px;
+  border: 0px;
+  font-weight: 400;
+  border-bottom: 0.8px solid rgb(208, 189, 189);
+  transition: border-color 0.2s ease-in-out;
+}
+
+ input[type="text"]:focus {
+  border-color: #3498db;
+  border: 0px;
+  border-bottom:  1px solid rgb(118, 96, 164);
+  outline: none;
+  transition: border-color 0.2s ease-in-out;
+}
