--- a/spa/src/components/formcomponents/FormComponents.css
+++ b/spa/src/components/formcomponents/FormComponents.css
@@ -98,7 +98,7 @@ textarea {
 .option-container input[type="text"]{
   width: 80%;
   display: inline-block;
-
+  background-color: #ebebeb;
 }
 
 .cross-btn {
