--- a/spa/src/components/myforms/MyForms.css
+++ b/spa/src/components/myforms/MyForms.css
@@ -1,16 +1,18 @@
 .container {
   margin: 20px;
   padding: 20px;
+  background-color: #fefefe;
 }
 
 .form-card {
   position: relative;
-  width: 250px;
+  width: 180px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   margin: 20px;
   text-align: center;
   display: inline-block;
+  
 }
 
 .form-card-image {
@@ -30,14 +32,6 @@
   color: #333;
 }
 
-.form-card-footer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 40px;
-  background-color: #fff;
-}
 
 .form-card-menu {
   position: absolute;
@@ -50,12 +44,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
+  width: 20px;
   height: 30px;
   border-radius: 50%;
-  background-color: #e3e3e3;
   color: #333;
-  font-size: 1.5rem;
+  font-size: 1rem;
   cursor: pointer;
 }
 
@@ -63,34 +56,22 @@
   background-color: white;
   border: 1px solid #e1e1e1;
   border-radius: 4px;
-
-  padding: 0.5rem;
+  padding: 0.2rem;
 }
 
-.form-card-menu-items ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
-.form-card-menu-items li {
-  margin: 0.5rem 0;
-}
-
-.form-card-menu-items-button {
-  background-color: transparent;
-  border: none;
-  font-size: 1rem;
+.form-card-menu-item{
+  text-align: left;
   cursor: pointer;
+  font-size: 12px;
+  padding: 2px;
 }
 
-.form-card-menu-items-button:focus {
-  outline: none;
+.form-card-menu-item:hover{
+  background-color: #9ce2fc;
 }
 
-.form-card:hover .form-card-menu-items {
-  display: block;
-}
+
 
 .createButton {
   margin-top: 10px;
