--- a/spa/src/components/formcomponents/FormComponents.css
+++ b/spa/src/components/formcomponents/FormComponents.css
@@ -2,10 +2,16 @@
   background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #ced4da;
-  padding: 10px;
+  padding: 20px;
   box-sizing: border-box;
   margin-top: 20px;
+  cursor: pointer;
 }
+
+.form-component[focused=true] {
+  border-left: 10px solid rgb(120, 108, 151);
+}
+
 
 input[type="text"],
 textarea {
@@ -18,6 +24,7 @@ textarea {
   justify-content: space-between;
   margin-top: 20px;
   border-top: 1px rgb(87, 69, 111) solid;
+  padding-top: 10px;
 }
 
 .footer .switch {
