--- a/spa/src/components/sidebar/SideBar.css
+++ b/spa/src/components/sidebar/SideBar.css
@@ -1,4 +1,10 @@
 /* Dropdown styles */
+
+.sidebar-container {
+  position: sticky;
+  top: 20px;
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
