--- a/spa/src/components/formcomponents/FormComponents.css
+++ b/spa/src/components/formcomponents/FormComponents.css
@@ -143,3 +143,58 @@ textarea {
 }
 
 
+
+.select-dropdown-container select {
+  width: 100%;
+  height: 40px;
+}
+
+
+.select-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.select-wrapper select {
+  appearance: none;
+  background-color: #fff;
+
+  border-radius: 5px;
+  box-shadow: none;
+  color: #333;
+  font-size: 16px;
+  padding: 10px 40px 10px 20px;
+  width: 100%;
+}
+
+.select-wrapper::before {
+  content: '\25BC';
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #999;
+  pointer-events: none;
+}
+
+.select-wrapper::after {
+  content: '';
+  position: absolute;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.select-wrapper select:focus {
+  outline: none;
+}
+
+.select-wrapper select:hover +::after {
+  background-color: #e0e0e0;
+}
+
