--- a/spa/src/components/card/card.css
+++ b/spa/src/components/card/card.css
@@ -2,101 +2,111 @@
   cursor: pointer;
 }
 .form-card {
-    position: relative;
-    width: 180px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    margin: 20px;
-    text-align: center;
-    display: inline-block;
-    padding-bottom: 10px;
-
+  position: relative;
+  width: 180px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+  text-align: center;
+  display: inline-block;
+  padding-bottom: 10px;
 }
 
-.form-card:hover{
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-
+.form-card:hover {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .form-card-image {
-    border: 1px solid #eee;
-    margin: 2px;
+  border: 1px solid #eee;
+  margin: 2px;
 }
 
 .form-card-header {
-    padding: 5px;
-    font-size: 1rem;
-    font-weight: bold;
+  padding: 5px;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .form-card-body {
-    padding: 10px;
-    font-size: 0.8rem;
-    color: #333;
+  padding: 10px;
+  font-size: 0.8rem;
+  color: #333;
 }
 
-
 .form-card-menu {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 10px;
-   
-
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
 }
 
 .form-card-menu-dots {
-    cursor: pointer;
-    font-size: 1.2em;
-  
+  cursor: pointer;
+  font-size: 1.2em;
 }
 
 .form-card-menu-items {
-    background-color: white;
-    border: 1px solid #e1e1e1;
-    border-radius: 4px;
-    padding: 0.2rem;
-    bottom: -50px;
-    right: -130px;
-    position: absolute;
-    z-index: 1;
-   
-   
+  opacity: 0;
+  display: none;
+  background-color: white;
+  border: 1px solid #e1e1e1;
+  border-radius: 4px;
+  padding: 0.2rem;
+  bottom: -138px;
+  right: -130px;
+  position: absolute;
+  z-index: 1;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease-out, transform 0.3s ease-out;
 }
 
+.form-card-menu-items.show {
+  opacity: 1;
+  display: block;
+  transform: translateY(0);
+}
 
 .form-card-menu-item {
-    text-align: left;
-    cursor: pointer;
-    font-size: 12px;
-    padding: 2px;
-    display: block;
-   
+  text-align: left;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 2px;
+  display: block;
 }
 
 .form-card-menu-item:hover {
-   color: #3eabff;
-   background-color: #eee;
-   
+  color: #3eabff;
+  background-color: #eee;
 }
 
-a.form-card-menu-item  {
-    text-decoration: none;
-    color: #000;
-    font-size: 14px;
-    padding-bottom: 5px;
-    font-weight: 500;
+a.form-card-menu-item {
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+  padding-bottom: 5px;
+  font-weight: 500;
 }
 
 .createButton {
-    margin-top: 10px;
-    background-color: rgb(0, 94, 255);
-    color: #fff;
-    border: none;
-    height: 40px;
-    float: right;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-weight: 600;
+  border-radius: 3px;
+  padding: 12px 24px;
+  border: 0;
+  color: #3a4149;
+  background: #e7ebee;
+  line-height: 1.15;
+  font-size: 16px;
+  transition: all 0.1s ease;
+  box-shadow: 0 0 0 0 #fff, 0 0 0 1px #babebe;
 }
 
 .createButton:hover {
-    color: rgb(0, 94, 255);
-    border: 1px solid rgb(0, 94, 255);
+  transition: all 0.1s ease;
+  box-shadow: 0 0 0 0 #d0c5c5, 0 0 0 3px #a8aaaa;
+}
+
+a.form-card-menu-item {
+  font-size: 0.875rem;
 }
