--- a/spa/src/components/formcomponents/FormComponents.css
+++ b/spa/src/components/formcomponents/FormComponents.css
@@ -8,10 +8,9 @@
   cursor: pointer;
 }
 
-.form-component[focused=true] {
+.form-component[focused="true"] {
   border-left: 10px solid rgb(120, 108, 151);
 }
-
 
 input[type="text"],
 textarea {
@@ -102,7 +101,7 @@ textarea {
 
 /**  select input */
 
-.option-container input[type="text"]{
+.option-container input[type="text"] {
   width: 80%;
   display: inline-block;
   background-color: #ebebeb;
@@ -117,11 +116,9 @@ textarea {
   left: 10px;
 }
 
-
 .option:hover .cross-btn {
   display: inline-block;
 }
-
 
 .cross-btn:before,
 .cross-btn:after {
@@ -142,13 +139,10 @@ textarea {
   transform: rotate(-45deg);
 }
 
-
-
 .select-dropdown-container select {
   width: 100%;
   height: 40px;
 }
-
 
 .select-wrapper {
   position: relative;
@@ -168,7 +162,7 @@ textarea {
 }
 
 .select-wrapper::before {
-  content: '\25BC';
+  content: "\25BC";
   position: absolute;
   right: 10px;
   top: 50%;
@@ -178,7 +172,7 @@ textarea {
 }
 
 .select-wrapper::after {
-  content: '';
+  content: "";
   position: absolute;
   background-color: #f0f0f0;
   border-radius: 5px;
@@ -194,7 +188,13 @@ textarea {
   outline: none;
 }
 
-.select-wrapper select:hover +::after {
+.select-wrapper select:hover + ::after {
   background-color: #e0e0e0;
 }
+
+.createbutton-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
 
