--- a/spa/src/components/spinner/Spinner.css
+++ b/spa/src/components/spinner/Spinner.css
@@ -8,16 +8,22 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(213, 202, 202, 0.5);
   }
   
-  .spinner-container {
-    position: relative;
-    width: 80px;
-    height: 80px;
+ 
+
+  .msg {
+    font-size: large;
+    font-weight: 500;
+    background-color: rgb(52, 46, 46);
+    padding: 20px;
+    border-radius: 20px;
+    text-align: center;
+    color: white;
   }
   
-  .spinner {
+  /* .spinner {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,4 +44,4 @@
       transform: rotate(360deg);
     }
   }
-  
+   */
