--- a/spa/src/components/login/LoginBox.css
+++ b/spa/src/components/login/LoginBox.css
@@ -1,97 +1,159 @@
-.login-box-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+:root {
+  --error: #e81123;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", "Helvetica Neue", "Lucida Grande", "Roboto", "Ebrima",
+    "Nirmala UI", "Gadugi", "Segoe Xbox Symbol", "Segoe UI Symbol", "Meiryo UI",
+    "Khmer UI", "Tunga", "Lao UI", "Raavi", "Iskoola Pota", "Latha",
+    "Leelawadee", "Microsoft YaHei UI", "Microsoft JhengHei UI", "Malgun Gothic",
+    "Estrangelo Edessa", "Microsoft Himalaya", "Microsoft New Tai Lue",
+    "Microsoft PhagsPa", "Microsoft Tai Le", "Microsoft Yi Baiti",
+    "Mongolian Baiti", "MV Boli", "Myanmar Text", "Cambria Math";
+}
+
+html,
+body {
+  background-color: #e2e5d3;
+  color: #1b1b1b;
+}
+
+section {
+  display: table-cell;
+  vertical-align: middle;
   height: 100vh;
+  width: 100rem;
+  max-width: 100%;
 }
 
-.login-box {
-  width: 400px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
- 
-  padding: 20px;
-  text-align: center;
+.auth-wrapper {
+  max-width: 440px;
+  width: calc(100% - 40px);
+  padding: 44px;
+  margin: auto;
+  margin-bottom: 28px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  min-width: 320px;
 }
 
-.login-header {
-  margin-top: 0;
+.title {
+  line-height: 1.75rem;
+  color: #1b1b1b;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
-.email-input {
-  margin: 10px;
-  padding: 10px;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  font-size: 16px;
+.titlename {
+  margin-left: 5px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mt-16 {
+  margin-top: 16px;
+}
+
+.error {
+  color: var(--error) !important;
+}
+
+.error-inp {
+  border-bottom-color: var(--error) !important;
+}
+
+input[type="email"].input {
+  padding: 4px 8px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 255, 255, 0.4);
+  height: 32px;
+  height: 2rem;
+  padding: 6px 10px;
+  padding-left: 10px;
+  border-width: 1px;
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-left-width: 1px;
+  border-color: #666;
+  border-color: rgba(0, 0, 0, 0.6);
+  height: 36px;
   outline: none;
-  transition: border-color 0.3s ease-in-out;
-  width: 80%;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  background-color: transparent;
+  border-top-width: 0;
+  border-left-width: 0;
+  border-right-width: 0;
+  padding-left: 0;
+  width: calc(100% - 20px);
 }
 
-.email-input:focus {
-  border-color: #007bff;
+input[type="email"].input:hover {
+  border-color: #323232;
+  border-color: rgba(0, 0, 0, 0.8);
 }
 
-.login-button {
-  margin: 10px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+input[type="email"].input::placeholder {
+  font-size: 15px;
+}
+
+.btn {
+  margin: 0 0 0 auto;
   display: block;
-  margin: auto;
-}
-
-.login-button:hover {
-  background-color: #0069d9;
-}
-
-.url-container {
-  margin: 20px 0;
-}
-
-.url-label {
-  font-weight: bold;
-}
-
-.url {
-  margin: 10px;
-  white-space: pre-wrap;
-}
-
-.code-input {
-  margin: auto;
-  padding: 10px;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  font-size: 16px;
-  outline: none;
-  transition: border-color 0.3s ease-in-out;
-  width: 80%;
-}
-
-.code-input:focus {
-  border-color: #007bff;
-}
-
-.submit-button {
-  margin: 10px;
-  padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #0067b8;
   color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border: 2px solid #0067b8;
+  padding: 5px 30px;
+  font-size: 15px;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-  display: block;
-  margin: auto;
+  border-radius: 0px;
+  font-weight: 400;
+  min-width: 5px;
 }
 
-.submit-button:hover {
-  background-color: #0069d9;
+.btn:hover {
+  background-color: #005da6;
 }
+
+.d-none {
+  display: none !important;
+}
+
+.identity {
+  display: inline-flex;
+  gap: 5px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+button.back {
+  border: none;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: unset;
+  cursor: pointer;
+}
+
+
+button.back:hover {
+  background-color: #e6e6e6;
+  background-color: rgba(0, 0, 0, .1);
+}
+
+#user_identity {
+  font-size: 15px;
+  color: #1b1b1b;
+}
+
