--- a/spa/src/components/login/LoginBox.css
+++ b/spa/src/components/login/LoginBox.css
@@ -58,7 +58,7 @@ section {
   border-bottom-color: var(--error) !important;
 }
 
-input[type="email"].input {
+input[type="email"].loginemail {
   padding: 4px 8px;
   border-style: solid;
   border-width: 2px;
@@ -88,12 +88,12 @@ input[type="email"].input {
   -webkit-text-fill-color: #000 !important;
 }
 
-input[type="email"].input:hover {
+input[type="email"].loginemail:hover {
   border-color: #323232;
   border-color: rgba(0, 0, 0, 0.8);
 }
 
-input[type="email"].input::placeholder {
+input[type="email"].loginemail::placeholder {
   font-size: 15px;
 }
 
