--- a/spa/src/components/sidebar/SideBar.css
+++ b/spa/src/components/sidebar/SideBar.css
@@ -2,7 +2,9 @@
 
 .sidebar-container {
   position: sticky;
-  top: 20px;
+  top: 110px;
+  max-height: 400px;
+  margin-left: 10px;
 }
 
 .dropdown {
