--- a/spa/src/components/card/card.css
+++ b/spa/src/components/card/card.css
@@ -1,6 +1,3 @@
-.sample-card {
-  cursor: pointer;
-}
 .form-card {
   position: relative;
   width: 180px;
@@ -16,14 +13,15 @@
 }
 
 .form-card-image {
+  cursor: pointer;
   border: 1px solid #eee;
   margin: 2px;
 }
 
 .form-card-header {
   padding: 5px;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.875rem;
+  font-weight: 600;
 }
 
 .form-card-body {
@@ -45,45 +43,43 @@
 }
 
 .form-card-menu-items {
-  opacity: 0;
-  display: none;
+  opacity: 1;
+  display: block;
   background-color: white;
   border: 1px solid #e1e1e1;
   border-radius: 4px;
   padding: 0.2rem;
-  bottom: -138px;
-  right: -130px;
+  bottom: -120px;
+  right: -100px;
   position: absolute;
   z-index: 1;
   transform: translateY(-10px);
   transition: opacity 0.3s ease-out, transform 0.3s ease-out;
 }
 
-.form-card-menu-items.show {
-  opacity: 1;
-  display: block;
-  transform: translateY(0);
-}
-
-.form-card-menu-item {
-  text-align: left;
-  cursor: pointer;
-  font-size: 12px;
-  padding: 2px;
-  display: block;
-}
-
-.form-card-menu-item:hover {
-  color: #3eabff;
-  background-color: #eee;
-}
-
 a.form-card-menu-item {
   text-decoration: none;
   color: #000;
   font-size: 14px;
-  padding-bottom: 5px;
+  padding: 2px;
   font-weight: 500;
+  font-size: 0.775rem;
+  font-weight: 400;
+  color: rgb(66, 66, 66);
+  display: block;
+  text-align: left;
+  margin: 3px;
+}
+
+a.form-card-menu-item:hover {
+  color: #3eabff;
+  background-color: #eee;
+}
+
+a.form-card-menu-item svg {
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.295rem;
 }
 
 .createButton {
@@ -107,6 +103,3 @@ a.form-card-menu-item {
   box-shadow: 0 0 0 0 #d0c5c5, 0 0 0 3px #a8aaaa;
 }
 
-a.form-card-menu-item {
-  font-size: 0.875rem;
-}
