--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -39,8 +39,12 @@
   --form-submit-width: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #f5f5f5;
+  background-color: rgb(250, 227, 225);
 }
 
 main .form-container {
@@ -501,8 +505,9 @@ main .form form .form-message {
 }
 
 .form-title {
-  font-size: 32px;
-  font-weight: 700;
+  font-size: 24pt;
+  font-family: "docs-Roboto", Helvetica, Arial, sans-serif;
+  letter-spacing: 0;
 }
 
 .form-description {
@@ -546,12 +551,10 @@ main .form form fieldset[name="titlepanel"] {
   background-color: white;
   margin: auto;
   width: 95%;
-  position: relative;
-  left: 17px;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
     0 1px 1px 0 rgba(0, 0, 0, 0.141), 0 1px 3px 0 rgba(0, 0, 0, 0.122);
   border-radius: 8px;
-  border-top: 5px #9e6060 solid;
+  border-top: 5px #dd4343 solid;
 }
 
 main .form form fieldset[name="titlepanel"] .form-title {
