--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -5,7 +5,7 @@
   --form-background-color: var(--mt-background-color-primary);
   --form-padding: 3%;
   --form-columns: 1;
-  --form-field-gap: 20px 0 0 0;
+  --form-field-gap: 12px 0 0 0;
   --form-invalid-border-color: var(--mt-global-color-orange);
   --form-input-padding: 0.75rem 0.6rem;
   --form-input-font-size: 15px;
@@ -383,19 +383,18 @@ main .form form .form-message {
   width: calc(100% - 16px);
 }
 
-@media (max-width: 750px) {
+@media (max-width: 767px) {
   .form-container {
-    max-width: 100%
+    max-width: 100%;
   }
 
   .form-fieldset-wrapper {
     padding: 2px;
   }
-}
 
-@media (min-width: 576px) {
-  .form-container {
-    max-width: 540px;
+  main .form form fieldset[name="titlepanel"] {
+    width: 100%;
+    margin: auto;
   }
 }
 
@@ -563,6 +562,8 @@ main .form form fieldset[name="titlepanel"] {
     0 1px 1px 0 rgba(0, 0, 0, 0.141), 0 1px 3px 0 rgba(0, 0, 0, 0.122);
   border-radius: 8px;
   border-top: 5px #dd4343 solid;
+  width: 95%;
+  margin: auto;
 }
 
 main .form form fieldset[name="titlepanel"] .form-title {
