--- a/spa/src/components/bottombar/BottomNavigation.css
+++ b/spa/src/components/bottombar/BottomNavigation.css
@@ -8,6 +8,7 @@
   justify-content: space-around;
   padding: 12px 0;
   box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+ 
 }
 
 .nav-item {
@@ -39,7 +40,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  color: #555555;
+  color: #010101;
   font-size: 12px;
   margin: 8px 0;
   flex-basis: calc(33.33% - 8px);
@@ -51,8 +52,7 @@
   font-weight: bold;
 }
 
-.create-plus-button {
-  border: 1px solid black;
-  border-radius: 50%;
-  min-width: max-content;
+.nav-item > svg.icon {
+    height: 25px;
+    width: 25px;
 }
