--- a/spa/src/components/titlepanel/TitlePanel.css
+++ b/spa/src/components/titlepanel/TitlePanel.css
@@ -1,9 +1,11 @@
 .title-container {
-  border: 0.1px solid rgb(174, 147, 147);
+  border: 1px solid #ced4da;
   padding: 10px;
-  box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.141),
+  background: white;
+  padding: 20px;
+  border-radius: 4px;
+ 
 }
-
 
 .title-container .form-title {
   font-size: 24pt;
@@ -11,11 +13,6 @@
 
 .title-container .form-description {
   font-size: 11pt;
-}
-.title-container {
-  background: white;
-  padding: 20px;
-  box-shadow: 0 3.2px 7.2px 0 rgb(0 0 0 / 13%), 0 0.6px 1.8px 0 rgb(0 0 0 / 11%);
 }
 
 
