--- a/spa/src/components/bottombar/BottomNavigation.css
+++ b/spa/src/components/bottombar/BottomNavigation.css
@@ -8,7 +8,6 @@
   justify-content: space-around;
   padding: 12px 0;
   box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
- 
 }
 
 .nav-item {
@@ -26,6 +25,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  height: 20vh;
   width: 100%;
   background-color: #f5f5f5;
   padding: 12px 0;
@@ -53,6 +53,13 @@
 }
 
 .nav-item > svg.icon {
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
+}
+
+.option-item svg {
+  height: 25px;
+  width: 25px;
+  position: relative;
+  top: 8px;
 }
