--- a/spa/src/components/sidebar/SideBar.css
+++ b/spa/src/components/sidebar/SideBar.css
@@ -118,3 +118,10 @@
 .button-17:disabled {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
+
+.dropdown-content svg {
+  height: 15px;
+  width: 15px;
+  position: relative;
+  top: 2px;
+}
