--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,8 @@
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
   --text-color: #000;
+  
+  --highlight-gradient: linear-gradient(75deg, #DB3278, #EE732F);
 
   /* fonts */
   --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
@@ -233,5 +235,5 @@ main .section[data-section-status='initialized'] {
 }
 
 main .section.highlight {
-  background-color: var(--highlight-background-color);
+  background-color: var(--highlight-gradient);
 }
