--- a/styles/styles.css
+++ b/styles/styles.css
@@ -276,8 +276,9 @@ main .section.highlight {
   text-align: center;
 }
 
-.default-content-wrapper a {
+.default-content-wrapper .button-container a.button {
   background-color: transparent;
   border-color: black;
   color: black;
+  font-size: var(--body-font-size-s);
 }
