--- a/spa/src/components/modal/modal.css
+++ b/spa/src/components/modal/modal.css
@@ -16,6 +16,7 @@
   background-color: white;
   width: 400px;
   height: 300px;
+  position: relative;
 }
 
 .modal form {
@@ -36,19 +37,32 @@
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
- 
   border-radius: 4px;
 }
 
-.modal button {
+.modal .launchbutton {
   padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 25px;
   background-color: #007bff;
   color: #fff;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .modal button:hover {
   background-color: #0056b3;
+}
+
+.modal-close {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  font-size: 20px;
+  border: none;
+  background: none;
+  color: black;
+  cursor: pointer;
+  padding: 0px;;
+
 }
